Change css classes for bootstrap 3 integration

--- a/src/plugin/ICAP/DropZoneBundle/Resources/translations/messages.en.yml
+++ b/src/plugin/ICAP/DropZoneBundle/Resources/translations/messages.en.yml
@@ -1,12 +1,16 @@
 Common: 'Common'
 Peer review criteria: 'Peer review criteria'
 Participant: 'Participant'
+Common information: 'Commons informations'
+Instruction: 'Instruction'
 icap_dropzone_form_instruction: 'instruction'
+Document type allowed: 'Document type allowed'
 icap_dropzone_form_allowWorkspaceResource: 'Workspace resources'
 icap_dropzone_form_allowUpload: 'Uploaded files'
 icap_dropzone_form_allowUrl: 'Urls'
-Standard evaluation: 'Standard evaluation'
-Peer review evaluation: 'Peer review evaluation'
+Type of evaluation: 'Type of evaluation'
+icap_dropzone_form_StandardEvaluation: 'Standard evaluation'
+icap_dropzone_form_PeerReviewEvaluation: 'Peer review evaluation'
 icap_dropzone_form_expectedTotalCorrection: 'Correction number expected to evaluate a deposit'
 icap_dropzone_form_allowDropInReview: 'Allow deposit in peer review'
 Rating: 'Rating'
