--- a/src/plugin/ICAP/DropZoneBundle/Resources/translations/messages.fr.yml
+++ b/src/plugin/ICAP/DropZoneBundle/Resources/translations/messages.fr.yml
@@ -1,12 +1,16 @@
 Common: 'Général'
 Peer review criteria: 'Critères d''évaluation par les pairs'
 Participant: 'Participant'
+Common information: 'Informations Générales'
+Instruction: 'Instruction'
 icap_dropzone_form_instruction: 'instruction'
+Document type allowed: 'Types de document autorisés'
 icap_dropzone_form_allowWorkspaceResource: 'Resources du workspace'
 icap_dropzone_form_allowUpload: 'Fichiers téléchargés (upload)'
 icap_dropzone_form_allowUrl: 'Urls'
-Standard evaluation: 'Evaluation standard'
-Peer review evaluation: 'Evaluation par les pairs'
+Type of evaluation: 'Type d''évaluation'
+icap_dropzone_form_StandardEvaluation: 'Evaluation standard'
+icap_dropzone_form_PeerReviewEvaluation: 'Evaluation par les pairs'
 icap_dropzone_form_expectedTotalCorrection: 'Nombre de correction attendu pour évaluer un dépôt'
 icap_dropzone_form_allowDropInReview: 'Autoriser le dépôt de document lors de l''évaluation par les pairs'
 Rating: 'Notation'
