DropZoneBundle common edit form and start for criteria form

--- a/src/plugin/ICAP/DropZoneBundle/Resources/translations/messages.fr.yml
+++ b/src/plugin/ICAP/DropZoneBundle/Resources/translations/messages.fr.yml
@@ -1,28 +1,41 @@
+Resource: 'Ressource'
+dropZone_edit: 'Modifier'
 Common: 'Général'
 Peer review criteria: 'Critères d''évaluation par les pairs'
 Participant: 'Participant'
 Common information: 'Informations Générales'
 Instruction: 'Instruction'
-icap_dropzone_form_instruction: 'instruction'
+icap_dropzone_common_form_instruction: 'Instruction'
 Document type allowed: 'Types de document autorisés'
-icap_dropzone_form_allowWorkspaceResource: 'Resources du workspace'
-icap_dropzone_form_allowUpload: 'Fichiers téléchargés (upload)'
-icap_dropzone_form_allowUrl: 'Urls'
+icap_dropzone_common_form_allowWorkspaceResource: 'Resources du workspace'
+icap_dropzone_common_form_allowUpload: 'Fichiers téléchargés (upload)'
+icap_dropzone_common_form_allowUrl: 'Urls'
 Type of evaluation: 'Type d''évaluation'
-icap_dropzone_form_StandardEvaluation: 'Evaluation standard'
-icap_dropzone_form_PeerReviewEvaluation: 'Evaluation par les pairs'
-icap_dropzone_form_expectedTotalCorrection: 'Nombre de correction attendu pour évaluer un dépôt'
-icap_dropzone_form_allowDropInReview: 'Autoriser le dépôt de document lors de l''évaluation par les pairs'
+icap_dropzone_common_form_StandardEvaluation: 'Evaluation standard'
+icap_dropzone_common_form_PeerReviewEvaluation: 'Evaluation par les pairs'
+icap_dropzone_common_form_expectedTotalCorrection: 'Nombre de correction attendu pour évaluer un dépôt'
+icap_dropzone_common_form_allowDropInReview: 'Autoriser le dépôt de document lors de l''évaluation par les pairs'
 Rating: 'Notation'
-icap_dropzone_form_displayNotationToLearners: 'Afficher la notation aux apprenants'
-icap_dropzone_form_displayNotationMessageToLearners: 'Afficher un message de réussite ou d''échec aux apprenants'
-icap_dropzone_form_minimumScoreToPass: 'Note minimum pour réussir l''évaluation'
+icap_dropzone_common_form_displayNotationToLearners: 'Afficher la notation aux apprenants'
+icap_dropzone_common_form_displayNotationMessageToLearners: 'Afficher un message de réussite ou d''échec aux apprenants'
+icap_dropzone_common_form_minimumScoreToPass: 'Note minimum pour réussir l''évaluation'
 Planning: 'Planification'
 manualPlanning: 'Manuellement'
 scheduleByDatePlanning: 'Par jour'
 manualStateNotStarted: 'Pas commencé / Terminé'
 allowDropManualState: 'Dépôt'
 peerReviewManualState: 'Evaluation par les pairs'
-icap_dropzone_form_startAllowDrop: 'Début du dépôt'
-icap_dropzone_form_endAllowDrop: 'Fin du dépôt'
-icap_dropzone_form_endReview: 'Fin de l''évaluation par les pairs'
+icap_dropzone_common_form_startAllowDrop: 'Début du dépôt'
+icap_dropzone_common_form_endAllowDrop: 'Fin du dépôt'
+icap_dropzone_common_form_endReview: 'Fin de l''évaluation par les pairs'
+icap_dropzone_criterion_form_instruction: 'Instruction'
+Create: 'Créer'
+Cancel: 'Annuler'
+Save and continue: 'Sauvegarder et continuer'
+Return: 'Retour'
+icap_dropzone_criteria_form_allowCommentInCorrection: 'Proposer une zone de commentaire'
+icap_dropzone_criteria_form_totalCriteriaColumn: 'Nombre de colonne'
+Evaluation Criteria: 'Critères d''évaluation par les pairs'
+Add a criterion: 'Ajouter un critère'
+Delete: 'Supprimer'
+Edit a criterion: 'Modifier un critère'
