--- a/src/plugin/ICAP/DropZoneBundle/Resources/translations/messages.en.yml
+++ b/src/plugin/ICAP/DropZoneBundle/Resources/translations/messages.en.yml
@@ -1,28 +1,41 @@
+Resource: 'Resource'
+dropZone_edit: 'Edit'
 Common: 'Common'
 Peer review criteria: 'Peer review criteria'
 Participant: 'Participant'
 Common information: 'Commons informations'
 Instruction: 'Instruction'
-icap_dropzone_form_instruction: 'instruction'
+icap_dropzone_common_form_instruction: 'Instruction'
 Document type allowed: 'Document type allowed'
-icap_dropzone_form_allowWorkspaceResource: 'Workspace resources'
-icap_dropzone_form_allowUpload: 'Uploaded files'
-icap_dropzone_form_allowUrl: 'Urls'
+icap_dropzone_common_form_allowWorkspaceResource: 'Workspace resources'
+icap_dropzone_common_form_allowUpload: 'Uploaded files'
+icap_dropzone_common_form_allowUrl: 'Urls'
 Type of evaluation: 'Type of evaluation'
-icap_dropzone_form_StandardEvaluation: 'Standard evaluation'
-icap_dropzone_form_PeerReviewEvaluation: 'Peer review evaluation'
-icap_dropzone_form_expectedTotalCorrection: 'Correction number expected to evaluate a deposit'
-icap_dropzone_form_allowDropInReview: 'Allow deposit in peer review'
+icap_dropzone_common_form_StandardEvaluation: 'Standard evaluation'
+icap_dropzone_common_form_PeerReviewEvaluation: 'Peer review evaluation'
+icap_dropzone_common_form_expectedTotalCorrection: 'Correction number expected to evaluate a deposit'
+icap_dropzone_common_form_allowDropInReview: 'Allow deposit in peer review'
 Rating: 'Rating'
-icap_dropzone_form_displayNotationToLearners: 'Display notation to learners'
-icap_dropzone_form_displayNotationMessageToLearners: 'Display a success or an error message.'
-icap_dropzone_form_minimumScoreToPass: 'Minimum score to pass the evaluation'
+icap_dropzone_common_form_displayNotationToLearners: 'Display notation to learners'
+icap_dropzone_common_form_displayNotationMessageToLearners: 'Display a success or an error message.'
+icap_dropzone_common_form_minimumScoreToPass: 'Minimum score to pass the evaluation'
 Planning: 'Planning'
 manualPlanning: 'Manual'
 scheduleByDatePlanning: 'Schedule by date'
 manualStateNotStarted: 'Not started / Finished'
 allowDropManualState: 'Deposit'
 peerReviewManualState: 'Peer review'
-icap_dropzone_form_startAllowDrop: 'Start of deposit'
-icap_dropzone_form_endAllowDrop: 'End of deposit'
-icap_dropzone_form_endReview: 'End of peer review'
+icap_dropzone_common_form_startAllowDrop: 'Start of deposit'
+icap_dropzone_common_form_endAllowDrop: 'End of deposit'
+icap_dropzone_common_form_endReview: 'End of peer review'
+icap_dropzone_criterion_form_instruction: 'Instruction'
+Create: 'Create'
+Cancel: 'Cancel'
+Save and continue: 'Save and continue'
+Return: 'Return'
+icap_dropzone_criteria_form_allowCommentInCorrection: 'Allow comment in correction'
+icap_dropzone_criteria_form_totalCriteriaColumn: 'Total column'
+Evaluation Criteria: 'Peer review evaluation criteria'
+Add a criterion: 'Add a criterion'
+Delete: 'Delete'
+Edit a criterion: 'Edit a criterion'
