--- a/src/plugin/ICAP/DropZoneBundle/Resources/translations/messages.en.yml
+++ b/src/plugin/ICAP/DropZoneBundle/Resources/translations/messages.en.yml
@@ -39,3 +39,4 @@ Evaluation Criteria: 'Peer review evaluation criteria'
 Add a criterion: 'Add a criterion'
 Delete: 'Delete'
 Edit a criterion: 'Edit a criterion'
+Delete a criterion: 'Delete a criterion'
