--- a/src/plugin/ICAP/DropZoneBundle/Resources/translations/messages.fr.yml
+++ b/src/plugin/ICAP/DropZoneBundle/Resources/translations/messages.fr.yml
@@ -39,3 +39,4 @@ Evaluation Criteria: 'Critères d''évaluation par les pairs'
 Add a criterion: 'Ajouter un critère'
 Delete: 'Supprimer'
 Edit a criterion: 'Modifier un critère'
+Delete a criterion: 'Supprimer un critère'
