Work in progress DropZoneAndPeerReview

--- a/src/plugin/ICAP/DropZoneBundle/Resources/translations/messages.en.yml
+++ b/src/plugin/ICAP/DropZoneBundle/Resources/translations/messages.en.yml
@@ -7,36 +7,43 @@ Common information: 'Commons informations'
 Instruction: 'Instruction'
 icap_dropzone_common_form_instruction: 'Instruction'
 Document type allowed: 'Document type allowed'
-icap_dropzone_common_form_allowWorkspaceResource: 'Workspace resources'
-icap_dropzone_common_form_allowUpload: 'Uploaded files'
-icap_dropzone_common_form_allowUrl: 'Urls'
+Allow workspace resource: 'Workspace resources'
+Allow upload: 'Uploaded files'
+Allow url: 'Urls'
 Type of evaluation: 'Type of evaluation'
-icap_dropzone_common_form_StandardEvaluation: 'Standard evaluation'
-icap_dropzone_common_form_PeerReviewEvaluation: 'Peer review evaluation'
-icap_dropzone_common_form_expectedTotalCorrection: 'Correction number expected to evaluate a deposit'
-icap_dropzone_common_form_allowDropInReview: 'Allow deposit in peer review'
+Standard evaluation: 'Standard evaluation'
+Peer review evaluation: 'Peer review evaluation'
+Expected total correction: 'Correction number expected to evaluate a deposit'
+Allow drop in review: 'Allow deposit in peer review'
 Rating: 'Rating'
-icap_dropzone_common_form_displayNotationToLearners: 'Display notation to learners'
-icap_dropzone_common_form_displayNotationMessageToLearners: 'Display a success or an error message.'
-icap_dropzone_common_form_minimumScoreToPass: 'Minimum score to pass the evaluation'
+Display notation to learners: 'Display notation to learners'
+Display notation message to learners: 'Display a success or an error message.'
+Minimum score to pass: 'Minimum score to pass the evaluation'
 Planning: 'Planning'
 manualPlanning: 'Manual'
 scheduleByDatePlanning: 'Schedule by date'
 manualStateNotStarted: 'Not started / Finished'
 allowDropManualState: 'Deposit'
 peerReviewManualState: 'Peer review'
-icap_dropzone_common_form_startAllowDrop: 'Start of deposit'
-icap_dropzone_common_form_endAllowDrop: 'End of deposit'
-icap_dropzone_common_form_endReview: 'End of peer review'
+Start allow drop: 'Start of deposit'
+End allow drop: 'End of deposit'
+End review: 'End of peer review'
 icap_dropzone_criterion_form_instruction: 'Instruction'
 Create: 'Create'
 Cancel: 'Cancel'
 Save and continue: 'Save and continue'
 Return: 'Return'
-icap_dropzone_criteria_form_allowCommentInCorrection: 'Allow comment in correction'
-icap_dropzone_criteria_form_totalCriteriaColumn: 'Total column'
+Allow comment in correction: 'Allow comment in correction'
+Total criteria column: 'Total column'
 Evaluation Criteria: 'Peer review evaluation criteria'
 Add a criterion: 'Add a criterion'
 Delete: 'Delete'
 Edit a criterion: 'Edit a criterion'
 Delete a criterion: 'Delete a criterion'
+Choose at least one type of document: 'Choose at least one type of document'
+Choose at least one type of ranking: 'Choose at least one type of ranking'
+Must be before end allow drop: 'Must be before end allow drop'
+Must be after start allow drop: 'Must be after start allow drop'
+Must be before end peer review: 'Must be before end peer review'
+Must be after end allow drop: 'Must be after end allow drop'
+Choose a date: 'Choose a date'
