--- a/src/plugin/ICAP/DropZoneBundle/Resources/translations/messages.fr.yml
+++ b/src/plugin/ICAP/DropZoneBundle/Resources/translations/messages.fr.yml
@@ -7,36 +7,43 @@ Common information: 'Informations Générales'
 Instruction: 'Instruction'
 icap_dropzone_common_form_instruction: 'Instruction'
 Document type allowed: 'Types de document autorisés'
-icap_dropzone_common_form_allowWorkspaceResource: 'Resources du workspace'
-icap_dropzone_common_form_allowUpload: 'Fichiers téléchargés (upload)'
-icap_dropzone_common_form_allowUrl: 'Urls'
+Allow workspace resource: 'Resources du workspace'
+Allow upload: 'Fichiers téléchargés (upload)'
+Allow url: 'Urls'
 Type of evaluation: 'Type d''évaluation'
-icap_dropzone_common_form_StandardEvaluation: 'Evaluation standard'
-icap_dropzone_common_form_PeerReviewEvaluation: 'Evaluation par les pairs'
-icap_dropzone_common_form_expectedTotalCorrection: 'Nombre de correction attendu pour évaluer un dépôt'
-icap_dropzone_common_form_allowDropInReview: 'Autoriser le dépôt de document lors de l''évaluation par les pairs'
+Standard evaluation: 'Evaluation standard'
+Peer review evaluation: 'Evaluation par les pairs'
+Expected total correction: 'Nombre de correction attendu pour évaluer un dépôt'
+Allow drop in review: 'Autoriser le dépôt de document lors de l''évaluation par les pairs'
 Rating: 'Notation'
-icap_dropzone_common_form_displayNotationToLearners: 'Afficher la notation aux apprenants'
-icap_dropzone_common_form_displayNotationMessageToLearners: 'Afficher un message de réussite ou d''échec aux apprenants'
-icap_dropzone_common_form_minimumScoreToPass: 'Note minimum pour réussir l''évaluation'
+Display notation to learners: 'Afficher la notation aux apprenants'
+Display notation message to learners: 'Afficher un message de réussite ou d''échec aux apprenants'
+Minimum score to pass: 'Note minimum pour réussir l''évaluation'
 Planning: 'Planification'
 manualPlanning: 'Manuellement'
 scheduleByDatePlanning: 'Par jour'
 manualStateNotStarted: 'Pas commencé / Terminé'
 allowDropManualState: 'Dépôt'
 peerReviewManualState: 'Evaluation par les pairs'
-icap_dropzone_common_form_startAllowDrop: 'Début du dépôt'
-icap_dropzone_common_form_endAllowDrop: 'Fin du dépôt'
-icap_dropzone_common_form_endReview: 'Fin de l''évaluation par les pairs'
+Start allow drop: 'Début du dépôt'
+End allow drop: 'Fin du dépôt'
+End review: 'Fin de l''évaluation par les pairs'
 icap_dropzone_criterion_form_instruction: 'Instruction'
 Create: 'Créer'
 Cancel: 'Annuler'
 Save and continue: 'Sauvegarder et continuer'
 Return: 'Retour'
-icap_dropzone_criteria_form_allowCommentInCorrection: 'Proposer une zone de commentaire'
-icap_dropzone_criteria_form_totalCriteriaColumn: 'Nombre de colonne'
+Allow comment in correction: 'Proposer une zone de commentaire'
+Total criteria column: 'Nombre de colonne'
 Evaluation Criteria: 'Critères d''évaluation par les pairs'
 Add a criterion: 'Ajouter un critère'
 Delete: 'Supprimer'
 Edit a criterion: 'Modifier un critère'
 Delete a criterion: 'Supprimer un critère'
+Choose at least one type of document: 'Choisissez au moins un type de document'
+Choose at least one type of ranking: 'Choisissez au moins un type de notation'
+Must be before end allow drop: 'Doit être inferieur à la fin du dépôt'
+Must be after start allow drop: 'Doit être supérieur au début du dépôt'
+Must be before end peer review: 'Doit être inférieur à la fin de l''évaluation par les pairs'
+Must be after end allow drop: 'Doit être supérieur à la fin du dépôt'
+Choose a date: 'Choisissez une date'
