DropZone common part form + drop from work in progress

--- a/src/plugin/ICAP/DropZoneBundle/Resources/translations/messages.en.yml
+++ b/src/plugin/ICAP/DropZoneBundle/Resources/translations/messages.en.yml
@@ -22,9 +22,10 @@ Minimum score to pass: 'Minimum score to pass the evaluation'
 Planning: 'Planning'
 manualPlanning: 'Manual'
 scheduleByDatePlanning: 'Schedule by date'
-manualStateNotStarted: 'Not started / Finished'
+notStartedManualState: 'Not started'
 allowDropManualState: 'Deposit'
 peerReviewManualState: 'Peer review'
+finishedManualState: 'Finished'
 Start allow drop: 'Start of deposit'
 End allow drop: 'End of deposit'
 End review: 'End of peer review'
@@ -45,5 +46,8 @@ Choose at least one type of ranking: 'Choose at least one type of ranking'
 Must be before end allow drop: 'Must be before end allow drop'
 Must be after start allow drop: 'Must be after start allow drop'
 Must be before end peer review: 'Must be before end peer review'
+Must be after start peer review: 'Must be after start peer review'
+Must be before start peer review: 'Must be before start peer review'
 Must be after end allow drop: 'Must be after end allow drop'
 Choose a date: 'Choose a date'
+formatDatetime: 'm/d/Y h:i'
