--- a/src/plugin/ICAP/DropZoneBundle/Resources/translations/messages.fr.yml
+++ b/src/plugin/ICAP/DropZoneBundle/Resources/translations/messages.fr.yml
@@ -22,9 +22,10 @@ Minimum score to pass: 'Note minimum pour réussir l''évaluation'
 Planning: 'Planification'
 manualPlanning: 'Manuellement'
 scheduleByDatePlanning: 'Par jour'
-manualStateNotStarted: 'Pas commencé / Terminé'
+notStartedManualState: 'Pas commencé'
 allowDropManualState: 'Dépôt'
 peerReviewManualState: 'Evaluation par les pairs'
+finishedManualState: 'Terminé'
 Start allow drop: 'Début du dépôt'
 End allow drop: 'Fin du dépôt'
 End review: 'Fin de l''évaluation par les pairs'
@@ -45,5 +46,8 @@ Choose at least one type of ranking: 'Choisissez au moins un type de notation'
 Must be before end allow drop: 'Doit être inferieur à la fin du dépôt'
 Must be after start allow drop: 'Doit être supérieur au début du dépôt'
 Must be before end peer review: 'Doit être inférieur à la fin de l''évaluation par les pairs'
+Must be after start peer review: 'Doit être supérieur au début de l''évaluation par les pairs'
+Must be before start peer review: 'Doit être inférieur au début de l''évaluation par les pairs'
 Must be after end allow drop: 'Doit être supérieur à la fin du dépôt'
 Choose a date: 'Choisissez une date'
+formatDatetime: 'd/m/Y h:i'
